[FIX] padding must be set for #footer .content to prevent horizontal scrollbar
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/1.10@12622 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/thenews.css
+++ b/styles/thenews.css
@@ -443,10 +443,13 @@ a.flip img {
  	text-align: center;
  	font-size: .9em;
 	border-top: 1px solid #999999;
-	padding: 1em;
 	margin-top: -2px;
  }
 
+#footer .content {
+	padding: 1em;
+}
+ 
 #footer a:link,
 #footer a:visited {
 
